[gd_scene load_steps=2 format=3 uid="uid://upl2f1wfsnce"]

[ext_resource type="Script" path="res://Scenes/pause_menu.gd" id="1_hnnq7"]

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hnnq7")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.0
offset_top = -206.5
offset_right = 158.0
offset_bottom = 206.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -133.0
offset_bottom = -176.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.725, 1.725)
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "= Pause ="
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Quit")
text = "Resume
"

[node name="HTP" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "How To Play"

[node name="MainMenu" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu
"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Resume")
text = "Quit to Desktop
"

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HTP" to="." method="_on_htp_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
